Fix og:image to correct preview.jpg path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="Fusion OZ - Australian Migration Experts">
     <meta property="og:description" content="We provide high-quality migration and education solutions for Nepal to Australia.">
-    <meta property="og:image" content="https://fusionoz.com/images/preview.jpg">
+    <meta property="og:image" content="https://fusionoz.netlify.app/images/preview.jpg">
     <meta property="og:url" content="https://fusionoz.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Fusion OZ">
